# elegraph

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  create_gt.py  create_seam_cell_csv.py  create_sets.py  create_zarr.py  criterions.py  detector.py  loss_graph.py  models.py  parameters.py  predict.py  pyproject.toml  run.sh  spline_train.py  train.py  train_parameters.py  val.py  val_parameters.py  weak_detector.py
elegraph/: criterions.py  loss_graph.py  metric.py  models.py  test.py  train.py  try_unet_param.py  val.py
elegraph/scripts/: angle.py  angle_test.py  create_seam_cell_csv.py  create_zarr.py  deform.py  f1_score.py  logger.py  loss_graph.py  metric.py  simclr_loss.py  spline_train.py  transformations.py  try_unet_param.py  val.py  visual_matching.py
experiments/demo_run_1/: test_parameters.py  train_parameters.py
scripts/: create_2d_worms.py
test.zarr/gt/: 0.0.0  1.0.0  2.0.0  3.0.0  4.0.0  5.0.0  6.0.0
val.zarr/gt/: 0.0.0  1.0.0  2.0.0  3.0.0  4.0.0  5.0.0  6.0.0  7.0.0
