# https://peps.python.org/pep-0517/
# https://hatch.pypa.io/latest/config/build/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "elegraph"
description = "Straightening of C. elegans worms"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Manan Lalit", email = "lalitm@janelia.hhmi.org" },
    { name = "Ethan Tam", email = "ethantam@berkeley.edu" },
    { name = "Jan Funke", email = "funkej@janelia.hhmi.org" },
]
dynamic = ["version"]
dependencies = [
  "numpy",
  "tqdm",
  "argparse",
  "pandas",
  "matplotlib",
  "pyproject"
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff", "twine", "build"]
examples = ["jupyter", "matplotlib"]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_togglebutton",
    "jupyter_sphinx",
]

[project.urls]
homepage = "https://funkelab.github.io/elegraph"


# https://hatch.pypa.io/latest/version/
[tool.hatch.version]
path = "elegraph/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

# https://beta.ruff.rs/docs
[tool.ruff]
target-version = "py38"
src = ["elegraph"]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: ${PY_MAJOR_VERSION} no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.mypy]
files = "elegraph"
strict = true
allow_untyped_defs = true
allow_untyped_calls = true
disallow_any_generics = false
ignore_missing_imports = true
